--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.11.0",
-    "nodemon": "^3.1.9",
-    "router": "^1.3.8"
-  }
+    "nodemon": "^3.1.9"
+  },
+  "proxy": "http://localhost:5000"
 }
